# run_on_my_laptop

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  pyproject.toml  result.json
.claude/: settings.local.json
asr/: test_parakeet.py  test_whisper.py
models/: tokenizer.json  whisper.json
segmentation/: test_sam3.py
tests/: run_all_tests.py
whisper_cpp/: .gitignore  CMakeLists.txt  README.md
whisper_cpp/include/: audio.h  tokenizer.h
whisper_cpp/scripts/: export_whisper_to_pte.py
whisper_cpp/src/: audio.cpp  tokenizer.cpp  whisper.cpp
