[project]
name = "whisper-standalone"
version = "0.1.0"
description = "Standalone Whisper speech-to-text with ExecuTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torchaudio",
    "openai-whisper>=20250625",
    "executorch>=0.4.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
